rules rewriten to adress new file organization

--- a/utils/check_user_input.ipynb
+++ b/utils/check_user_input.ipynb
@@ -59,11 +59,12 @@
     "            expand(\"samples/{sample}/trimmed_fastqc_se/{sample}.trimmed_fastqc.html\", sample=SAMPLES),\n",
     "            expand(\"samples/{sample}/abricate_se/abricate_{sample}.csv\", sample=SAMPLES),\n",
     "            expand(\"samples/{sample}/snippy_se/{sample}_se/snps.tab\", sample=SAMPLES),\n",
-    "            expand(\"{project}/coverage/{sample}_coverage.tab\", sample=SAMPLES, project=PROJECT),\n",
-    "            expand(\"{project}/freebayes/{sample}/var.vcf\", sample=SAMPLES, project=PROJECT),\n",
-    "            expand(\"{project}/concat/multifile.fasta\", project=PROJECT),\n",
-    "            expand(\"{project}/mafft/mafft.fasta\", project=PROJECT),\n",
-    "            expand(\"{project}/fasttre/tree\", project=PROJECT),\n",
+    "            expand(\"projects/{project}/samples/{sample}/snippy/snps.consensus.fa\", sample=SAMPLES, project=PROJECT)\n",
+    "            expand(\"projects/{project}/coverage/{sample}_coverage.tab\", sample=SAMPLES, project=PROJECT),\n",
+    "            expand(\"projects/{project}/freebayes/{sample}/var.vcf\", sample=SAMPLES, project=PROJECT),\n",
+    "            expand(\"projects/{project}/concat/multifile.fasta\", project=PROJECT),\n",
+    "            expand(\"projects/{project}/mafft/mafft.fasta\", project=PROJECT),\n",
+    "            expand(\"projects/{project}/fasttre/tree\", project=PROJECT),\n",
     "        )\n",
     "\n",
     "\n",
