sample analysis working correctly for pe

--- a/utils/check_user_input.ipynb
+++ b/utils/check_user_input.ipynb
@@ -81,7 +81,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('read-quality-analysis')",
+   "display_name": "Python 3.10.6 (conda)",
    "language": "python",
    "name": "python3"
   },
@@ -92,7 +92,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1eaaecc0fc7cad8928217b3a8ae4fce6109b301cc421d7441f96db6be3aa0483"
+    "hash": "1dae43e6c2482424f6294181f7b3f65b336c042d28a4ed0021ddbc4fe1b01305"
    }
   }
  },
