create new project

--- a/utils/make_project.ipynb
+++ b/utils/make_project.ipynb
@@ -2,23 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['sample_1', 'sample_2']"
+       "['ERR10039719',\n",
+       " 'ERR10039716',\n",
+       " 'ERR10039720',\n",
+       " 'TEST_SINGLE_1',\n",
+       " 'ERR10109718',\n",
+       " 'ERR10039715',\n",
+       " 'TEST_SINGLE_2',\n",
+       " 'ERR10039723',\n",
+       " 'ERR10039718']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import os \n",
-    "\n",
+    "project = \"test_project\"\n",
     "path = \"./../samples/\"\n",
     "dir_list = os.listdir(path)\n",
     "dir_list"
@@ -26,33 +34,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['raw_fastqc', 'trimmed_reads', 'abricate', 'trimmed_fastqc', 'spades', 'snippy']\n",
+      "['raw_fastqc', 'trimmed_reads', 'abricate', 'trimmed_fastqc', 'spades', 'snippy']\n",
+      "['raw_fastqc', 'trimmed_reads', 'abricate', 'trimmed_fastqc', 'spades', 'snippy']\n",
+      "['raw_fastqc', 'trimmed_reads', 'abricate', 'trimmed_fastqc', 'spades', 'snippy']\n",
+      "['raw_fastqc', 'trimmed_reads', 'abricate', 'trimmed_fastqc', 'spades', 'snippy']\n",
+      "['raw_fastqc', 'trimmed_reads', 'abricate', 'trimmed_fastqc', 'spades', 'snippy']\n",
+      "['raw_fastqc', 'trimmed_reads', 'abricate', 'trimmed_fastqc', 'spades', 'snippy']\n",
+      "['raw_fastqc', 'trimmed_reads', 'abricate', 'trimmed_fastqc', 'spades', 'snippy']\n",
+      "['raw_fastqc', 'trimmed_reads', 'abricate', 'trimmed_fastqc', 'spades', 'snippy']\n"
+     ]
+    }
+   ],
    "source": [
     "for file in dir_list:\n",
     "    file_path = path+file\n",
     "    file_dir = os.listdir(file_path)\n",
-    "    if \"snps.consensus.fa\" in file_dir:\n",
-    "        with open(file_path+\"/\"+\"snps.consensus.fa\") as f:\n",
-    "            lines = f.readlines()\n",
+    "    print(file_dir)\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cp: -r not specified; omitting directory '../samples/ERR10039715/snippy/reference'\n",
+      "cp: -r not specified; omitting directory '../samples/ERR10039716/snippy/reference'\n"
+     ]
+    }
+   ],
    "source": [
-    "os.system(f\"cat projects/{sys.argv[1]}/concat/* > projects/{sys.argv[1]}/concat/multifile.fasta\")\n"
+    "\n",
+    "\n",
+    "\n",
+    "    \n"
    ]
   }
  ],
