--- a/utils/make_project.ipynb
+++ b/utils/make_project.ipynb
@@ -63,23 +63,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cp: -r not specified; omitting directory '../samples/ERR10039715/snippy/reference'\n",
-      "cp: -r not specified; omitting directory '../samples/ERR10039716/snippy/reference'\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['snps.tab',\n",
+       " 'snps.consensus.subs.fa',\n",
+       " 'snps.txt',\n",
+       " 'snps.aligned.fa',\n",
+       " 'snps.vcf.gz',\n",
+       " 'snps.consensus.fa',\n",
+       " 'snps.vcf.gz.tbi',\n",
+       " 'snps.raw.vcf',\n",
+       " 'snps.csv',\n",
+       " 'snps.bed',\n",
+       " 'snps.html',\n",
+       " 'snps.filt.subs.vcf.gz',\n",
+       " 'snps.depth.gz.tbi',\n",
+       " 'snps.log',\n",
+       " 'snps.bam',\n",
+       " 'snps.filt.vcf',\n",
+       " 'snps.depth.gz',\n",
+       " 'snps.gff',\n",
+       " 'snps.bam.bai',\n",
+       " 'snps.filt.subs.vcf.gz.tbi',\n",
+       " 'snps.filt.subs.vcf',\n",
+       " 'snps.vcf']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../projects/test/sample_TEST_SINGLE_2/snippy/snps.consensus.fa\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "SAMPLE = \"TEST_SINGLE_2\"\n",
+    "\n",
+    "file_path = f\"../projects/test/sample_{SAMPLE}/snippy/\"\n",
+    "file_list = os.listdir(path)\n",
     "\n",
     "\n",
+    "os.system(f\"mkdir ../projects/test/main_result/consensus/ -p\")\n",
     "\n",
-    "    \n"
+    "if \"snps.consensus.fa\" in file_list:\n",
+    "    with open(file_path+\"snps.consensus.fa\") as f:\n",
+    "        lines = f.readlines()\n",
+    "        lines[0] = f\">{SAMPLE}_SARS_COV_2\\n\"\n",
+    "        with open(f\"../projects/test/main_result/consensus/\"+lines[0][1:-1]+\"_consensus.fasta\", \"w\") as w:\n",
+    "            w.writelines(lines)\n",
+    "os.system(f\"cat ../projects/test/main_result/consensus/* > ../projects/test/main_result/All_consensus.fasta\")\n",
+    "\n"
    ]
   }
  ],
