--- a/utils/check_user_input.ipynb
+++ b/utils/check_user_input.ipynb
@@ -81,7 +81,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 (conda)",
+   "display_name": "Python 3.10.6 ('insaflu')",
    "language": "python",
    "name": "python3"
   },
@@ -92,7 +92,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "081061c7980fab9706aea7b19a17ecf86d0b6dadfd4db952154d963d271e8dc1"
+    "hash": "1358ab5cc9fad31f5aa8938f4d80c7fc1c7ab655fec6b753e75fda91ebbb6fc0"
    }
   }
  },
