--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -228,6 +228,52 @@
     "    print(True)\n",
     "else:\n",
     "    print(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TranslationError",
+     "evalue": "Codon 'A--' is invalid",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTranslationError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [54], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m                 new_consensus[gene[\u001b[38;5;241m0\u001b[39m]][record\u001b[38;5;241m.\u001b[39mid] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m record\u001b[38;5;241m.\u001b[39mseq[pos[\u001b[38;5;241m0\u001b[39m]:pos[\u001b[38;5;241m1\u001b[39m]]\u001b[38;5;241m.\u001b[39mtranslate(table\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m11\u001b[39m, gap\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m,to_stop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     21\u001b[0m             \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[0;32m---> 22\u001b[0m                 new_consensus[gene[\u001b[38;5;241m0\u001b[39m]][record\u001b[38;5;241m.\u001b[39mid] \u001b[38;5;241m=\u001b[39m \u001b[43mrecord\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mseq\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpos\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[43mpos\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtranslate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m11\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgap\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m-\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mto_stop\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m new_consensus\n",
+      "File \u001b[0;32m~/mambaforge/envs/insaflu/lib/python3.10/site-packages/Bio/Seq.py:1377\u001b[0m, in \u001b[0;36m_SeqAbstractBaseClass.translate\u001b[0;34m(self, table, stop_symbol, to_stop, cds, gap)\u001b[0m\n\u001b[1;32m   1369\u001b[0m         warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m   1370\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mPartial codon, len(sequence) not a multiple of three. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1371\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mThis may become an error in future.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   1372\u001b[0m             BiopythonWarning,\n\u001b[1;32m   1373\u001b[0m         )\n\u001b[1;32m   1374\u001b[0m     \u001b[39mreturn\u001b[39;00m Seq(\u001b[39mNone\u001b[39;00m, n \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m3\u001b[39m)\n\u001b[1;32m   1376\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m(\n\u001b[0;32m-> 1377\u001b[0m     _translate_str(\u001b[39mstr\u001b[39;49m(\u001b[39mself\u001b[39;49m), table, stop_symbol, to_stop, cds, gap\u001b[39m=\u001b[39;49mgap)\n\u001b[1;32m   1378\u001b[0m )\n",
+      "File \u001b[0;32m~/mambaforge/envs/insaflu/lib/python3.10/site-packages/Bio/Seq.py:3011\u001b[0m, in \u001b[0;36m_translate_str\u001b[0;34m(sequence, table, stop_symbol, to_stop, cds, pos_stop, gap)\u001b[0m\n\u001b[1;32m   3009\u001b[0m             amino_acids\u001b[39m.\u001b[39mappend(gap)\n\u001b[1;32m   3010\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 3011\u001b[0m             \u001b[39mraise\u001b[39;00m CodonTable\u001b[39m.\u001b[39mTranslationError(\n\u001b[1;32m   3012\u001b[0m                 \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCodon \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mcodon\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is invalid\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   3013\u001b[0m             ) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[1;32m   3014\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(amino_acids)\n",
+      "\u001b[0;31mTranslationError\u001b[0m: Codon 'A--' is invalid"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import sys\n",
+    "from Bio import SeqIO\n",
+    "import get_gene_bank as ggb \n",
+    "\n",
+    "reference = \"../reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.gb\"\n",
+    "consensus = \"../projects/insaflu_bigger/main_result/mafft/mafft_masked.fasta\"\n",
+    "\n",
+    "positions = ggb.get_positions_gb(reference)\n",
+    "new_consensus = {}\n",
+    "for gene in positions:\n",
+    "    new_consensus[gene[0]] = {}\n",
+    "    for pos in gene[1]:\n",
+    "        #print(f\"This is {gene[0]} with the pos {pos[0], pos[1]}\") #This is orf1ab with the pos (265, 13468)\n",
+    "        for record in SeqIO.parse(consensus, \"fasta\"):\n",
+    "            #need to find new solution to this problem\n",
+    "            #the final aa alignment has no gaps due to error in this segment of the pipline\n",
+    "            try:\n",
+    "                #new_consensus[gene[0]][record.id] += record.seq[pos[0]:pos[1]].replace('-','N').translate(table=11, gap='-',to_stop=False)\n",
+    "\n",
+    "                new_consensus[gene[0]][record.id] += record.seq[pos[0]:pos[1]].replace('-','').translate(table=11, gap='-',to_stop=False)\n",
+    "            except:\n",
+    "                new_consensus[gene[0]][record.id] = record.seq[pos[0]:pos[1]].replace('-','').translate(table=11, gap='-',to_stop=False)\n",
+    "new_consensus"
    ]
   }
  ],
