[add] draft functions

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -232,20 +232,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TranslationError",
-     "evalue": "Codon 'A--' is invalid",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../projects/insaflu_bigger/main_result/mafft/mafft_masked.fasta'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTranslationError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [54], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m                 new_consensus[gene[\u001b[38;5;241m0\u001b[39m]][record\u001b[38;5;241m.\u001b[39mid] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m record\u001b[38;5;241m.\u001b[39mseq[pos[\u001b[38;5;241m0\u001b[39m]:pos[\u001b[38;5;241m1\u001b[39m]]\u001b[38;5;241m.\u001b[39mtranslate(table\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m11\u001b[39m, gap\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m,to_stop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     21\u001b[0m             \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[0;32m---> 22\u001b[0m                 new_consensus[gene[\u001b[38;5;241m0\u001b[39m]][record\u001b[38;5;241m.\u001b[39mid] \u001b[38;5;241m=\u001b[39m \u001b[43mrecord\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mseq\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpos\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[43mpos\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtranslate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m11\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgap\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m-\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mto_stop\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m new_consensus\n",
-      "File \u001b[0;32m~/mambaforge/envs/insaflu/lib/python3.10/site-packages/Bio/Seq.py:1377\u001b[0m, in \u001b[0;36m_SeqAbstractBaseClass.translate\u001b[0;34m(self, table, stop_symbol, to_stop, cds, gap)\u001b[0m\n\u001b[1;32m   1369\u001b[0m         warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m   1370\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mPartial codon, len(sequence) not a multiple of three. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1371\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mThis may become an error in future.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   1372\u001b[0m             BiopythonWarning,\n\u001b[1;32m   1373\u001b[0m         )\n\u001b[1;32m   1374\u001b[0m     \u001b[39mreturn\u001b[39;00m Seq(\u001b[39mNone\u001b[39;00m, n \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m3\u001b[39m)\n\u001b[1;32m   1376\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m(\n\u001b[0;32m-> 1377\u001b[0m     _translate_str(\u001b[39mstr\u001b[39;49m(\u001b[39mself\u001b[39;49m), table, stop_symbol, to_stop, cds, gap\u001b[39m=\u001b[39;49mgap)\n\u001b[1;32m   1378\u001b[0m )\n",
-      "File \u001b[0;32m~/mambaforge/envs/insaflu/lib/python3.10/site-packages/Bio/Seq.py:3011\u001b[0m, in \u001b[0;36m_translate_str\u001b[0;34m(sequence, table, stop_symbol, to_stop, cds, pos_stop, gap)\u001b[0m\n\u001b[1;32m   3009\u001b[0m             amino_acids\u001b[39m.\u001b[39mappend(gap)\n\u001b[1;32m   3010\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 3011\u001b[0m             \u001b[39mraise\u001b[39;00m CodonTable\u001b[39m.\u001b[39mTranslationError(\n\u001b[1;32m   3012\u001b[0m                 \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCodon \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mcodon\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is invalid\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   3013\u001b[0m             ) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[1;32m   3014\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(amino_acids)\n",
-      "\u001b[0;31mTranslationError\u001b[0m: Codon 'A--' is invalid"
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/reusebio/Documents/tese/insaflu_snakemake/utils/test.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/reusebio/Documents/tese/insaflu_snakemake/utils/test.ipynb#X14sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m new_consensus[gene[\u001b[39m0\u001b[39m]] \u001b[39m=\u001b[39m {}\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/reusebio/Documents/tese/insaflu_snakemake/utils/test.ipynb#X14sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m pos \u001b[39min\u001b[39;00m gene[\u001b[39m1\u001b[39m]:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/reusebio/Documents/tese/insaflu_snakemake/utils/test.ipynb#X14sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39m#print(f\"This is {gene[0]} with the pos {pos[0], pos[1]}\") #This is orf1ab with the pos (265, 13468)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/reusebio/Documents/tese/insaflu_snakemake/utils/test.ipynb#X14sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mfor\u001b[39;00m record \u001b[39min\u001b[39;00m SeqIO\u001b[39m.\u001b[39;49mparse(consensus, \u001b[39m\"\u001b[39;49m\u001b[39mfasta\u001b[39;49m\u001b[39m\"\u001b[39;49m):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/reusebio/Documents/tese/insaflu_snakemake/utils/test.ipynb#X14sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m         \u001b[39m#need to find new solution to this problem\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/reusebio/Documents/tese/insaflu_snakemake/utils/test.ipynb#X14sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m         \u001b[39m#the final aa alignment has no gaps due to error in this segment of the pipline\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/reusebio/Documents/tese/insaflu_snakemake/utils/test.ipynb#X14sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m         \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/reusebio/Documents/tese/insaflu_snakemake/utils/test.ipynb#X14sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m             \u001b[39m#new_consensus[gene[0]][record.id] += record.seq[pos[0]:pos[1]].replace('-','N').translate(table=11, gap='-',to_stop=False)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/reusebio/Documents/tese/insaflu_snakemake/utils/test.ipynb#X14sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m             new_consensus[gene[\u001b[39m0\u001b[39m]][record\u001b[39m.\u001b[39mid] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m record\u001b[39m.\u001b[39mseq[pos[\u001b[39m0\u001b[39m]:pos[\u001b[39m1\u001b[39m]]\u001b[39m.\u001b[39mreplace(\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mtranslate(table\u001b[39m=\u001b[39m\u001b[39m11\u001b[39m, gap\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m,to_stop\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "File \u001b[0;32m~/mambaforge/envs/read-quality-analysis/lib/python3.10/site-packages/Bio/SeqIO/__init__.py:605\u001b[0m, in \u001b[0;36mparse\u001b[0;34m(handle, format, alphabet)\u001b[0m\n\u001b[1;32m    603\u001b[0m iterator_generator \u001b[39m=\u001b[39m _FormatToIterator\u001b[39m.\u001b[39mget(\u001b[39mformat\u001b[39m)\n\u001b[1;32m    604\u001b[0m \u001b[39mif\u001b[39;00m iterator_generator:\n\u001b[0;32m--> 605\u001b[0m     \u001b[39mreturn\u001b[39;00m iterator_generator(handle)\n\u001b[1;32m    606\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mformat\u001b[39m \u001b[39min\u001b[39;00m AlignIO\u001b[39m.\u001b[39m_FormatToIterator:\n\u001b[1;32m    607\u001b[0m     \u001b[39m# Use Bio.AlignIO to read in the alignments\u001b[39;00m\n\u001b[1;32m    608\u001b[0m     \u001b[39mreturn\u001b[39;00m (r \u001b[39mfor\u001b[39;00m alignment \u001b[39min\u001b[39;00m AlignIO\u001b[39m.\u001b[39mparse(handle, \u001b[39mformat\u001b[39m) \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m alignment)\n",
+      "File \u001b[0;32m~/mambaforge/envs/read-quality-analysis/lib/python3.10/site-packages/Bio/SeqIO/FastaIO.py:183\u001b[0m, in \u001b[0;36mFastaIterator.__init__\u001b[0;34m(self, source, alphabet, title2ids)\u001b[0m\n\u001b[1;32m    181\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mThe alphabet argument is no longer supported\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    182\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtitle2ids \u001b[39m=\u001b[39m title2ids\n\u001b[0;32m--> 183\u001b[0m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m(source, mode\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mt\u001b[39;49m\u001b[39m\"\u001b[39;49m, fmt\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mFasta\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[0;32m~/mambaforge/envs/read-quality-analysis/lib/python3.10/site-packages/Bio/SeqIO/Interfaces.py:48\u001b[0m, in \u001b[0;36mSequenceIterator.__init__\u001b[0;34m(self, source, alphabet, mode, fmt)\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mThe alphabet argument is no longer supported\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     47\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 48\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstream \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(source, \u001b[39m\"\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m+\u001b[39;49m mode)\n\u001b[1;32m     49\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mshould_close_stream \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     50\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:  \u001b[39m# not a path, assume we received a stream\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../projects/insaflu_bigger/main_result/mafft/mafft_masked.fasta'"
      ]
     }
    ],
@@ -275,11 +276,58 @@
     "                new_consensus[gene[0]][record.id] = record.seq[pos[0]:pos[1]].replace('-','').translate(table=11, gap='-',to_stop=False)\n",
     "new_consensus"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['orf1ab', [[265, 13468], [13467, 21555]]], ['S', [[21562, 25384]]], ['ORF3a', [[25392, 26220]]], ['E', [[26244, 26472]]], ['M', [[26522, 27191]]], ['ORF6', [[27201, 27387]]], ['ORF7a', [[27393, 27759]]], ['ORF8', [[27893, 28259]]], ['N', [[28273, 29533]]], ['ORF10', [[29557, 29674]]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[['orf1ab', [[332, 13535], [17482, 25570]]],\n",
+       " ['S', [[28058, 31880]]],\n",
+       " ['ORF3a', [[33016, 33844]]],\n",
+       " ['E', [[34101, 34329]]],\n",
+       " ['M', [[34443, 35112]]],\n",
+       " ['ORF6', [[35297, 35483]]],\n",
+       " ['ORF7a', [[35560, 35926]]],\n",
+       " ['ORF8', [[36200, 36566]]],\n",
+       " ['N', [[36690, 37950]]],\n",
+       " ['ORF10', [[38383, 38500]]]]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gb = \"../reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.gb\"\n",
+    "consensus = \"../projects/insaflu_new_translate/main_result/mafft/mafft_masked.fasta\"\n",
+    "positions = ggb.get_positions_gb(reference)\n",
+    "print(positions)\n",
+    "def get_ref_adjusted_positions(fasta, positions): \n",
+    "    ref = list(SeqIO.parse(consensus, \"fasta\"))[0].seq\n",
+    "    for gene in positions:\n",
+    "        for group in gene[1]:\n",
+    "            n_gaps = ref[:group[0]].count('-')\n",
+    "            group[0] += n_gaps\n",
+    "            group[1] += n_gaps\n",
+    "    return positions"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('insaflu')",
+   "display_name": "Python 3.10.6 ('read-quality-analysis')",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +346,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1358ab5cc9fad31f5aa8938f4d80c7fc1c7ab655fec6b753e75fda91ebbb6fc0"
+    "hash": "1eaaecc0fc7cad8928217b3a8ae4fce6109b301cc421d7441f96db6be3aa0483"
    }
   }
  },
