--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -323,6 +323,107 @@
     "            group[1] += n_gaps\n",
     "    return positions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SARS_CoV_2_orf1ab', 'SARS_CoV_2_S', 'SARS_CoV_2_ORF3a', 'SARS_CoV_2_E', 'SARS_CoV_2_M', 'SARS_CoV_2_ORF6', 'SARS_CoV_2_ORF7a', 'SARS_CoV_2_ORF8', 'SARS_CoV_2_N', 'SARS_CoV_2_ORF10']\n",
+      "SARS_CoV_2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from Bio import SeqIO\n",
+    "\n",
+    "\n",
+    "genes = []\n",
+    "#genbank_file = \"../reference/A_H1N1pdm09_A_Michigan_45_2015.gbk\"\n",
+    "genbank_file = \"../reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.gb\"\n",
+    "def get_locus_protein(genbank_file,possible_name):\n",
+    "    locus_protein = []\n",
+    "    handle_gb = open(genbank_file)\n",
+    "    for record in SeqIO.parse(handle_gb, \"genbank\"):\n",
+    "        for features in record.features:\n",
+    "            if (features.type == 'CDS'):\n",
+    "                try:\n",
+    "                    a = features.qualifiers[\"locus_tag\"]\n",
+    "                    locus_protein.append(f\"{int(features.qualifiers['locus_tag'][0][-5:])}_{features.qualifiers['gene'][0]}\")\n",
+    "                except:\n",
+    "                    locus_protein.append(f\"{possible_name}_{features.qualifiers['gene'][0]}\")\n",
+    "    handle_gb.close()\n",
+    "    return locus_protein\n",
+    "\n",
+    "print(get_locus_protein(genbank_file, 'SARS_CoV_2'))\n",
+    "\n",
+    "def get_locus(genbank_file,possible_name):\n",
+    "    locus = []\n",
+    "    handle_gb = open(genbank_file)\n",
+    "    for record in SeqIO.parse(handle_gb, \"genbank\"):\n",
+    "        for features in record.features:\n",
+    "            if (features.type == 'CDS'):\n",
+    "                try:\n",
+    "                    a = features.qualifiers[\"locus_tag\"]\n",
+    "                    locus.append(f\"{int(features.qualifiers['locus_tag'][0][-5:])}\")\n",
+    "                except:\n",
+    "                    return possible_name\n",
+    "    handle_gb.close()\n",
+    "    return locus\n",
+    "\n",
+    "print(get_locus(genbank_file, 'SARS_CoV_2'))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_file = []\n",
+    "for record in SeqIO.parse(\"../projects/first_flu/sample_SRR10885406/snippy/snps.consensus.fa\", \"fasta\"):\n",
+    "    record.id = \"SampleX\" + record.id\n",
+    "    new_file.append(record)\n",
+    "SeqIO.write(new_file, \"short_seqs.fasta\", \"fasta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "G\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"hello/there/my/name/is/G\"\n",
+    "last_pos = len(a) - a[::-1].index(\"/\")\n",
+    "print(last_pos)\n",
+    "print(a[last_pos])"
+   ]
   }
  ],
  "metadata": {
