--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -424,11 +424,29 @@
     "print(last_pos)\n",
     "print(a[last_pos])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from Bio import SeqIO\n",
+    "\n",
+    "all_consensus = sys.argv[1]\n",
+    "\n",
+    "counter = 0\n",
+    "loop = len(sys.argv[2])\n",
+    "print(loop)\n",
+    "for idx, record in enumerate(SeqIO.parse(sys.argv[1], \"fasta\")):\n",
+    "    print()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('read-quality-analysis')",
+   "display_name": "Python 3.10.6 ('insaflu')",
    "language": "python",
    "name": "python3"
   },
@@ -447,7 +465,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1eaaecc0fc7cad8928217b3a8ae4fce6109b301cc421d7441f96db6be3aa0483"
+    "hash": "1358ab5cc9fad31f5aa8938f4d80c7fc1c7ab655fec6b753e75fda91ebbb6fc0"
    }
   }
  },
