working for flu and covid

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -427,20 +427,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "from Bio import SeqIO\n",
     "\n",
-    "all_consensus = sys.argv[1]\n",
-    "\n",
+    "alignment =\"../projects/first_flu/main_result/mafft/Alignment_nt_All.fasta\"\n",
+    "outdir = sys.argv[3]\n",
     "counter = 0\n",
-    "loop = len(sys.argv[2])\n",
-    "print(loop)\n",
-    "for idx, record in enumerate(SeqIO.parse(sys.argv[1], \"fasta\")):\n",
-    "    print()\n"
+    "loop = 8\n",
+    "list_of_segments = [[] for x in range(loop)]\n",
+    "\n",
+    "for record in SeqIO.parse(alignment, \"fasta\"):\n",
+    "    if counter == loop:\n",
+    "        counter = 0\n",
+    "    #print(counter)\n",
+    "    list_of_segments[counter].append(record)\n",
+    "    counter+=1\n",
+    "\n",
+    "for i in range(loop):\n",
+    "    #print(i)\n",
+    "    SeqIO.write(list_of_segments[i], f\"{outdir}/{i+1}/Alignment_nt_{i+1}.fasta\", \"fasta\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
