--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -453,6 +453,138 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ERR10039718', '94.9']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import re\n",
+    "\n",
+    "n_locus = 1\n",
+    "filename = '../projects/covid/main_result/coverage/ERR10039718_coverage.csv'\n",
+    "def get_coverage(filename):\n",
+    "    with open(filename, newline='') as csvfile:\n",
+    "        csv_reader = csv.reader(csvfile, delimiter='\\t')\n",
+    "        x = re.findall(\"(?<=coverage/)(.*?)(?=_coverage.csv)\",filename)\n",
+    "        coverage_list = list(csv_reader)[-1][-n_locus:]\n",
+    "        coverage_list.insert(0,x[0])\n",
+    "        return coverage_list\n",
+    "\n",
+    "get_coverage(filename)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Rodrigo'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"Rodrigo__1\"\n",
+    "string[:string.index(\"__1\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: [1, 2, 3], 10: [0, 1, 2, 3]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [[0,1,2,3],[10,0,1,2,3]]\n",
+    "dic = {}\n",
+    "for i in list:\n",
+    "    dic[i[0]] = i[1:]\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "90.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "coverage_file = \"../projects/flu_testing/main_result/coverage_translate.csv\"\n",
+    "def get_locus_w_coverage(coverage_file):\n",
+    "    with open(coverage_file, newline='') as csvfile:\n",
+    "        csv_reader = csv.reader(csvfile, delimiter=',')\n",
+    "        coverage_list = list(csv_reader)\n",
+    "        size = len(coverage_list[0])\n",
+    "        final_output = []\n",
+    "        for times in range(1,size):\n",
+    "            for sample in coverage_list:\n",
+    "                print(float(sample[times]))\n",
+    "                if float(sample[times]) >= 90.0:\n",
+    "                    final_output.append(times)\n",
+    "                    break\n",
+    "    return final_output\n",
+    "get_locus_w_coverage(coverage_file)"
+   ]
   }
  ],
  "metadata": {
