add concat snpeff output

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -1552,6 +1552,48 @@
     "if  a==b :\n",
     "    print(True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ID',\n",
+       " 'CHROM',\n",
+       " 'POS',\n",
+       " 'TYPE',\n",
+       " 'REF',\n",
+       " 'ALT',\n",
+       " 'FREQ',\n",
+       " 'COVERAGE',\n",
+       " 'EVIDENCE',\n",
+       " 'FTYPE',\n",
+       " 'STRAND',\n",
+       " 'NT_POS',\n",
+       " 'AA_POS',\n",
+       " 'EFFECT',\n",
+       " 'NT CHANGE',\n",
+       " 'AA CHANGE',\n",
+       " 'AA CHANGE ALT',\n",
+       " 'LOCUS_TAG',\n",
+       " 'GENE',\n",
+       " 'PRODUCT',\n",
+       " 'VARIANTS IN INCOMPLETE LOCUS']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s ='\"ID\"\t\"CHROM\"\t\"POS\"\t\"TYPE\"\t\"REF\"\t\"ALT\"\t\"FREQ\"\t\"COVERAGE\"\t\"EVIDENCE\"\t\"FTYPE\"\t\"STRAND\"\t\"NT_POS\"\t\"AA_POS\"\t\"EFFECT\"\t\"NT CHANGE\"\t\"AA CHANGE\"\t\"AA CHANGE ALT\"\t\"LOCUS_TAG\"\t\"GENE\"\t\"PRODUCT\"\t\"VARIANTS IN INCOMPLETE LOCUS\"'\n",
+    "s = s.replace(\"\\t\",\";\").replace('\"', \"\").split(';')\n",
+    "s"
+   ]
   }
  ],
  "metadata": {
