validated variant script and adjustments

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1584,7 @@
        " 'VARIANTS IN INCOMPLETE LOCUS']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1593,6 +1593,119 @@
     "s ='\"ID\"\t\"CHROM\"\t\"POS\"\t\"TYPE\"\t\"REF\"\t\"ALT\"\t\"FREQ\"\t\"COVERAGE\"\t\"EVIDENCE\"\t\"FTYPE\"\t\"STRAND\"\t\"NT_POS\"\t\"AA_POS\"\t\"EFFECT\"\t\"NT CHANGE\"\t\"AA CHANGE\"\t\"AA CHANGE ALT\"\t\"LOCUS_TAG\"\t\"GENE\"\t\"PRODUCT\"\t\"VARIANTS IN INCOMPLETE LOCUS\"'\n",
     "s = s.replace(\"\\t\",\";\").replace('\"', \"\").split(';')\n",
     "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_info_dic(info_list):\n",
+    "    info_dic = {}\n",
+    "    for item in info_list:\n",
+    "        pieces = item.split('=')\n",
+    "        info_dic[pieces[0]] = pieces[1]\n",
+    "    return info_dic\n",
+    "get_info_dic(['AB=0', 'ABP=0', 'AC=1', 'AF=1', 'AN=1', 'AO=534', 'CIGAR=1X', 'DP=534', 'DPB=534', 'DPRA=0', 'EPP=299.453', 'EPPR=0', 'GTI=0', 'LEN=1', 'MEANALT=1', 'MQM=60', 'MQMR=0', 'NS=1', 'NUMALT=1', 'ODDS=3802.59', 'PAIRED=0.996255', 'PAIREDR=0', 'PAO=0', 'PQA=0', 'PQR=0', 'PRO=0', 'QA=18353', 'QR=0', 'RO=0', 'RPL=361', 'RPP=146.734', 'RPPR=0', 'RPR=173', 'RUN=1', 'SAF=421', 'SAP=388.768', 'SAR=113', 'SRF=0', 'SRP=0', 'SRR=0', 'TYPE=snp'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_row_dict(row):\n",
+    "    row_dic = {\n",
+    "        'CHROM' : row[0],\n",
+    "        'POS' : row[1],\n",
+    "        'ID' : row[2],\n",
+    "        'REF' : row[3],\n",
+    "        'ALT' : row[4],\n",
+    "        'QUAL' : row[5]\n",
+    "    }\n",
+    "    return row_dic\n",
+    "        \t\t\t\t\t\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [33], line 24\u001b[0m\n\u001b[1;32m     22\u001b[0m info_dic \u001b[38;5;241m=\u001b[39m get_info_dic(info)\n\u001b[1;32m     23\u001b[0m row_dic \u001b[38;5;241m=\u001b[39m get_row_dict(line)\n\u001b[0;32m---> 24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43minfo_dic\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mTYPE\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msnp\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m info_dic[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTYPE\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdel\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m info_dic[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTYPE\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mins\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m info_dic[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTYPE\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m     27\u001b[0m     new_entry\u001b[38;5;241m.\u001b[39mappend(file) \u001b[38;5;66;03m#ID\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "def get_info_dic(info_list):\n",
+    "    info_dic = {}\n",
+    "    for item in info_list:\n",
+    "        pieces = item.split('=')\n",
+    "        info_dic[pieces[0]] = pieces[1]\n",
+    "    return info_dic\n",
+    "\n",
+    "def get_row_dict(row):\n",
+    "    row_dic = {\n",
+    "        'CHROM' : row[0],\n",
+    "        'POS' : row[1],\n",
+    "        'ID' : row[2],\n",
+    "        'REF' : row[3],\n",
+    "        'ALT' : row[4],\n",
+    "        'QUAL' : row[5]\n",
+    "    }\n",
+    "    return row_dic\n",
+    "\n",
+    "    \n",
+    "vcf_final = []\n",
+    "file = \"../projects/covid_testing_2/sample_ERR10039715/snippy/snps_snpeff.vcf\"\n",
+    "with open(file, 'r') as invcf:\n",
+    "    for line in invcf:\n",
+    "        if line.startswith('#'):\n",
+    "            continue\n",
+    "        new_entry = []\n",
+    "        line = line.strip().split()\n",
+    "        info = line[7].split(\";\")\n",
+    "        info_dic = get_info_dic(info)\n",
+    "        row_dic = get_row_dict(line)\n",
+    "        if 'snp' in info_dic['TYPE'] or 'del' in info_dic['TYPE'] or 'ins' in info_dic['TYPE']:\n",
+    "            \n",
+    "            new_entry.append(file) #ID\n",
+    "            new_entry.append(row_dic['CHROM']) #CHROM\n",
+    "            new_entry.append(row_dic['POS']) #POS\n",
+    "            new_entry.append(info_dic['TYPE']) #TYPE\n",
+    "            new_entry.append(row_dic['REF']) #REF\n",
+    "            new_entry.append(row_dic['ALT']) #ALT\n",
+    "            new_entry.append(info_dic['AO']/info_dic['DP']) #FREQ\n",
+    "            new_entry.append(0) #COVERAGE\n",
+    "            new_entry.append(0) #EVIDENCE\n",
+    "            new_entry.append(info_dic['TYPE']) #FTYPE\n",
+    "            new_entry.append(0) #STRAND\n",
+    "            new_entry.append(0) #NT_POS\n",
+    "            new_entry.append(0) #AA_POS\n",
+    "            new_entry.append(0) #EFFECT\n",
+    "            new_entry.append(0) #NT CHANGE\n",
+    "            new_entry.append(0) #AA CHANGE\n",
+    "            new_entry.append(0) #AA CHANGE ALT\n",
+    "            new_entry.append(0) #LOCUS_TAG\n",
+    "            new_entry.append(info_dic['ANN'].split('|')[2]) #GENE\n",
+    "            new_entry.append(0) #PRODUCT\n",
+    "            new_entry.append(0) #NT CHANGE\n",
+    "            new_entry.append(0) #VARIANTS IN INCOMPLETE LOCUS\n",
+    "            print(new_entry)\n",
+    "            vcf_final.append(new_entry)\n",
+    "\n",
+    "vcf_final\n",
+    "\n"
    ]
   }
  ],
