fix for different genomes

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -185,6 +185,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'flu'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from Bio import SeqIO\n",
+    "\n",
+    "def get_locus(genbank_file,possible_name):\n",
+    "    count = 0\n",
+    "    locus = []\n",
+    "    handle_gb = open(genbank_file)\n",
+    "    for record in SeqIO.parse(handle_gb, \"genbank\"):\n",
+    "        locus.append(count)\n",
+    "        count+=1\n",
+    "    handle_gb.close()\n",
+    "    if len(locus) == 1:\n",
+    "        return possible_name\n",
+    "    else:\n",
+    "        return locus\n",
+    "\n",
+    "#get_locus(\"/home/reusebio/tese/insaflu_snakemake/reference/B_Vic_B_Brisbane_60_2008.gbk\",'flu')\n",
+    "get_locus(\"/home/reusebio/tese/insaflu_snakemake/reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.gb\",'flu')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
    "outputs": [
